# radiant-operator

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
agent-py/: pyproject.toml
agent-py/src/: agent.py  create_index.py
agent-py/src/filters/: __init__.py  backchannel_stt.py
docs/foundation/: agent-build-plan.md  cursor-v1-build-plan.md  livekit-moss-starter.md  v1-final-checklist.md  vertex-veo-integration.md
docs/moss-corpus/: customer-patterns.md  google-ads.md  kane-context.md  meta-ads.md  versaunt.md
scripts/: moss-index-corpus.mjs  smoke-providers.mjs  sync-vercel-env.mjs
skills/: README.md
skills/bouncy-spring-motion/: SKILL.md
skills/clean-micro-animation/: SKILL.md
skills/fluid-ui-motion/: SKILL.md
skills/gsap-scroll-choreography/: SKILL.md
skills/interactive-motion-assets/: SKILL.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/radiant/: animated-transcript-words.tsx  creative-job-card.tsx  creative-queue-screen.tsx  creative-queue-skeleton.tsx  glowing-orb.tsx  maya-splash-intro.tsx  radiant-app.tsx  transcript-feed.tsx  transcript-panel.tsx  voice-advisor-screen.tsx
src/components/ui/: balloons.tsx
src/lib/radiant/: assemblyai-mic.ts  assemblyai.ts  audio.ts  balloons-in-container.ts  brand-assets.ts  browser-speech.ts  client-logger.ts  creative-jobs.ts  elevenlabs.ts  env.ts  gemini.ts  google-auth.ts  livekit.ts  logger.ts  moss.ts  platform-accent.ts  prompts.ts  queue-config.ts  turn-latency.ts  types.ts  use-mic-level.ts  use-speech-playback-level.ts  user-errors.ts  (+2 more)
(+10 files in other folders)
